WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
230871
[WinCairo] REGRESSION(
r280726
): registry keys enabling GPU process mode don't work
https://bugs.webkit.org/show_bug.cgi?id=230871
Summary
[WinCairo] REGRESSION(r280726): registry keys enabling GPU process mode don't...
Fujii Hironori
Reported
2021-09-27 18:05:12 PDT
[WinCairo] REGRESSION(
r280726
): registry keys enabling GPU process mode don't work
r270175
(
Bug 219294
) added registry keys to enable GPU process for WinCairo port. But after
r280726
(
Bug 228803
) changed the function name, they don't work.
Attachments
Patch
(4.19 KB, patch)
2021-09-27 18:40 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2021-09-27 18:31:26 PDT
1. Set the registry reg add HKEY_CURRENT_USER\Software\WebKit /v gpu_process_canvas_rendering /t REG_DWORD /d 1 /f 2. Start WinCairo WK2 MiniBrowser 3. Go to a web page containing 2D canvas. For example,
http://www.kevs3d.co.uk/dev/canvasmark/
4. Start Windows Task Manager and check if WebKitGPUProcess.exe is spawned
Fujii Hironori
Comment 2
2021-09-27 18:40:43 PDT
Created
attachment 439423
[details]
Patch
Fujii Hironori
Comment 3
2021-09-29 17:00:33 PDT
Comment on
attachment 439423
[details]
Patch Clearing flags on attachment: 439423 Committed
r283284
(
242311@main
): <
https://commits.webkit.org/242311@main
>
Fujii Hironori
Comment 4
2021-09-29 17:00:37 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2021-09-29 17:01:17 PDT
<
rdar://problem/83695330
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug