[WinCairo] REGRESSION(r280726): registry keys enabling GPU process mode don't work https://bugs.webkit.org/show_bug.cgi?id=230871

Reviewed by Don Olmstead.

Source/WebKit:

r270175 (Bug 219294) added registry keys to enable GPU process
mode for WinCairo port. But after r280726 (Bug 228803) changed the
function signature, they didn't work.

* Shared/WebPreferencesDefaultValues.cpp:
* Shared/win/WebPreferencesDefaultValuesWin.cpp:
(WebKit::isFeatureFlagEnabled):

Source/WTF:

* wtf/PlatformHave.h: r270175 defined HAVE_SYSTEM_FEATURE_FLAGS
for Windows to use WebKit::isFeatureFlagEnabled. But, it is no
longer needed.

Canonical link: https://commits.webkit.org/242311@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283284 268f45cc-cd09-0410-ab3c-d52691b4dbfc